--- a/css/main.css
+++ b/css/main.css
@@ -179,9 +179,9 @@ header {
 
 .icon-image {
     width: 30vw;
-    max-width: 160px;
+    max-width: 180px;
     height: 30vw;
-    max-height: 160px;
+    max-height: 180px;
     border-radius: 20px;
     background-color: #eaeaea;
 }
@@ -362,8 +362,6 @@ button, .project-tag{
 
 .problem-wrapper {
     width: 100%;
-    display: flex;
-    flex-direction: row;
     gap: var(--gap-md);
 }
 
@@ -379,4 +377,43 @@ button, .project-tag{
         grid-template-columns: 1fr;
         gap: var(--gap-sm);
     }
+}
+
+.project-content {
+    width: 100%;
+    min-width: 0;
+}
+
+.myswiper {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 500px;
+    overflow: hidden;
+}
+
+.swiper-slide {
+    height: 300px;
+    text-align: center;
+    display: flex;
+    color: #fff;
+    background: #444;
+    justify-content: center;
+    align-items: center;
+}
+
+.custom-pagination {
+    width: 100%;
+    gap: var(--gap-md);
+}
+
+.my-bullet {
+    width: 100%;
+    font-size: 16px;
+    padding: 0 0 0 20;
+    text-align: left;
+}
+
+.my-bullet-active {
+    background: #c9c9c9;
 }
