--- a/css/main.css
+++ b/css/main.css
@@ -428,6 +428,7 @@ MAIN WRAPPERS
     width: 100%;
     height: auto;
     padding: var(--gap-md) var(--gap-md);
+    border-top: 1px solid #d7d7d7;
     display: flex;
     flex-direction: row;
     align-items: start;
@@ -436,14 +437,9 @@ MAIN WRAPPERS
     transition: all 0.4s ease;
 }
 
-.project-link-wrapper:hover .project-block {
-    border: none;
-    background: #0a0a0a0a;
-    border-radius: 12px;
-}
-
 .project-block-left {
     display: flex;
+    padding: 8px 0px;
     flex-direction: row;
     gap: var(--gap-md);
     align-self: stretch;
@@ -464,7 +460,7 @@ MAIN WRAPPERS
 }
 
 .project-tag-container {
-    display: none;
+    display: flex;
     gap: 8px;
 }
 
@@ -489,10 +485,8 @@ button, .project-tag{
 
 .thumbnail-preview {
     position: relative; 
-    display: none;
-    opacity: 0;
-    width: 400px; 
-    height: 0px;
+    width: 300px; 
+    height: 100px;
     background-size: cover;
     background-position: center;
     border-radius: 8px;
@@ -503,8 +497,8 @@ button, .project-tag{
 }
 
 .thumbnail-preview.full {
+    width: 340px;
     height: 200px;
-    opacity: 1;
 }
 
 @media (max-width: 600px) {
